# rasterlottie

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: benchmark_render.rs  rasterlottie_cli.rs
src/: dotlottie.rs  effects.rs  error.rs  expression.rs  lib.rs  model.rs  model_parse.rs  model_types.rs  timeline.rs  trace_macros.rs
src/render/: assets.rs  composition.rs  drawing.rs  drawing_paths.rs  gif_encode.rs  layer_effects.rs  mod.rs  renderer.rs  renderer_cache.rs  renderer_types.rs  sample_cache.rs  scene.rs  tests.rs  tests_advanced.rs  tests_advanced_effects.rs  tests_layers.rs  text.rs  values.rs
src/render/renderer/: gif.rs  mod.rs  prepare.rs  raster.rs
src/render/tests_advanced/: fixtures.rs  gif.rs  mod.rs  rendering.rs
src/support/: analyzer.rs  analyzer_shapes.rs  analyzer_text.rs  mod.rs  tests.rs  tests_advanced.rs
tests/: corpus.rs  image_diff.rs
tests/corpus/: manifest.json
tests/fixtures/: gradient_linear_opacity_stops.json  gradient_radial_highlight_angle.json  layer_parenting_basic.json  mask_subtract_hole.json  polystar_basic.json  repeater_basic.json  stroke_dash_basic.json  track_matte_parent_redirect.json  trim_path_basic.json
tests/reference/: README.md  render_fixture.html
tools/bench/: compare-with-rlottie-docker.ps1  rlottie_bench.cpp
